# Pagerank-Approximation-on-GPU

./: .gitignore  CMakeLists.txt  README.md  debug.sh  main.cu  main_fixed.cu  main_graphblas.cu  main_load_balanced.cu  make.sh  np_main.cu  run.sh
Matrix/: Matrix.cpp  Matrix.h
Parse/: Parse.cpp  Parse.h
Utils/: Utils.cpp  Utils.h
graph_based_nvprof_results/scf/: fixed_complete  fixed_partial  floating_complete  floating_partial
graph_based_nvprof_results/smw/: fixed_complete  fixed_partial  floating_complete  floating_partial
graph_based_nvprof_results/xsparse/: fixed_complete  fixed_partial  floating_complete  floating_partial
graph_generator/: generat.gnp.py  generate.eff.py  generate.gnp.py  generate.py  generate.scf.py  generate.smw.py
graph_generator/5000000/: col_idx.txt  val.txt
graph_generator/6000000/: col_idx.txt  val.txt
new_ds/: scipy
new_ds/gnp/: col_idx.txt  non_zero.txt  results.txt  val.txt
new_ds/scf/: col_idx.txt  non_zero.txt  results.txt  val.txt
new_ds/smw/: col_idx.txt  non_zero.txt  (+2 more)
new_ds/smw-little/: col_idx.txt  non_zero.txt  results.txt
notebooks/: Convergence by error.ipynb  Convergence error .ipynb  Convergence error Exploration.ipynb  Correctness.ipynb  Execution Times.ipynb  Pagerank Displacement.ipynb
nvprof_results/: 07.05.2019.14.22  07.05.2019.14.39  25.04.2019.13.29  26.04.2019.09.00  29.04.2019.21.44
pagerank-alby/: Makefile  graph_utils.cuh  main.cpp  make.sh  pagerank.cu  pagerank.cuh  pagerank_experiment  pagerank_pipeline.cu  pagerank_pipeline.cuh  run.prev.sh  run.sh  sample_graph.hpp  utils.hpp
(+246 files in other folders)
